--- a/index.html
+++ b/index.html
@@ -812,7 +812,7 @@
                         </p>
                         <div class="testimonial-author">
                             <div>
-                                <div class="author-info">田中様（54歳）</div>
+                                <div class="author-info">T様（54歳）</div>
                                 <div class="author-location">奈良市・築22年一戸建て</div>
                             </div>
                             <div class="price-increase">+370万円</div>
@@ -828,7 +828,7 @@
                         </p>
                         <div class="testimonial-author">
                             <div>
-                                <div class="author-info">佐藤様（48歳）</div>
+                                <div class="author-info">S様（48歳）</div>
                                 <div class="author-location">大和郡山市・築15年マンション</div>
                             </div>
                             <div class="price-increase">+380万円</div>
@@ -860,9 +860,9 @@
             <div class="footer-content">
                 <div class="footer-brand">
                     <img src="century21logo_gold.png" alt="センチュリー21">
-                    <p>株式会社ホームマート<br>
+                    <p>センチュリー21ホームマート<br>
                     奈良県北葛城郡広陵町笠287-1<br>
-                    センチュリー21加盟店</p>
+                    </p>
                 </div>
                 
                 <div class="footer-section">
