--- a/index.html
+++ b/index.html
@@ -610,7 +610,7 @@
                 <div class="logo">
                     <img src="century21logo_gold.png" alt="センチュリー21">
                     <div>
-                        <div style="font-weight: bold; color: #383635;">ホームマート</div>
+                        <div style="font-weight: bold; color: #383635;">センチュリー21</div>
                         <div style="font-size: 12px; color: #666;">奈良県の不動産売却専門店</div>
                     </div>
                 </div>
@@ -630,7 +630,7 @@
             <div class="hero-content">
                 <div class="hero-text">
                     <div class="hero-badge">センチュリー21 全国964店舗</div>
-                    <h1>奈良県の不動産売却なら<br><span class="hero-highlight">最高値査定</span>のホームマート</h1>
+                    <h1>奈良県の不動産売却なら<br><span class="hero-highlight">最高値査定</span>のセンチュリー21</h1>
                     <p>全国No.1ネットワークの集客力と<br>地域密着の専門知識で、お客様の大切な不動産を<br>最適な価格で売却いたします。</p>
                     <a href="https://form.run/@century21top" target="_blank" class="cta-primary">無料査定を申し込む</a>
                 </div>
@@ -702,7 +702,7 @@
     <section class="services">
         <div class="container">
             <div class="section-header">
-                <h2 class="section-title">ホームマートのサービス</h2>
+                <h2 class="section-title">センチュリー21のサービス</h2>
                 <p class="section-subtitle">お客様のニーズに合わせた最適な売却プランをご提案</p>
             </div>
             
@@ -789,7 +789,7 @@
                 <img src="01_shinchan.png" alt="しんちゃん" class="character-image">
                 <div class="character-message">
                     <h3>センチュリー21は安心だゾ！</h3>
-                    <p>全国No.1の不動産ネットワークだから、みんなの大切なお家を最高値で売ってくれるゾ！<br>奈良県のことならホームマートにお任せだゾ！</p>
+                    <p>全国No.1の不動産ネットワークだから、みんなの大切なお家を最高値で売ってくれるゾ！<br>奈良県のことならセンチュリー21にお任せだゾ！</p>
                 </div>
             </div>
         </div>
