--- a/index.html
+++ b/index.html
@@ -1268,15 +1268,11 @@
                     <div class="president-points">
                         <div class="president-point">
                             <span class="point-icon">✓</span>
-                            <span>仲介だけでなく、買取再販・リフォームまで一気通貫で提案</span>
+                            <span>仲介だけでなく、買取再販・リフォームまで一気通貫で提案できることが私たちの強みです</span>
                         </div>
                         <div class="president-point">
                             <span class="point-icon">✓</span>
-                            <span>相場比較・販売戦略・内装の磨き上げ・広告導線・価格調整のタイミング――すべてを代表の私が直轄でリード</span>
-                        </div>
-                        <div class="president-point">
-                            <span class="point-icon">✓</span>
-                            <span>結果にコミットする経営者が直接対応</span>
+                            <span>相場比較・販売戦略・内装の磨き上げ・広告導線・価格調整のタイミング――すべてを代表の私が直轄でリードし、結果にコミットします</span>
                         </div>
                     </div>
                     
