--- a/index.html
+++ b/index.html
@@ -1795,7 +1795,7 @@
                     <img src="century21logo_gold.png" alt="センチュリー21">
                 </div>
                 <div class="footer-contact">
-                    <p>株式会社ホームマート<br>
+                    <p>センチュリー21ホームマート<br>
                     〒635-0821 奈良県北葛城郡広陵町笠287-1</p>
                     <div class="footer-phone">0120-43-8639</div>
                     <p>営業時間：9:00〜22:00 年中無休</p>
