--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         
         .phone-btn {
             background: #A19276;
-            color: white;
+            color: #FFD700;
             padding: 12px 24px;
             border-radius: 4px;
             text-decoration: none;
@@ -1051,7 +1051,7 @@
         
         .footer-phone {
             font-size: 24px;
-            color: #A19276;
+            color: #FFD700;
             font-weight: bold;
             margin: 10px 0;
         }
@@ -1332,8 +1332,7 @@
         <div class="container">
             <div class="section-header">
                 <h2 class="section-title">
-                    <img src="century21logo_gold_top.png" alt="センチュリー21">
-                    なぜセンチュリー21が選ばれるのか
+                    なぜセンチュリー21ホームマートが選ばれるのか
                 </h2>
                 <p class="section-subtitle">具体的な数値で見る、私たちの強み</p>
             </div>
@@ -1795,7 +1794,7 @@
                     <img src="century21logo_gold.png" alt="センチュリー21">
                 </div>
                 <div class="footer-contact">
-                    <p>センチュリー21ホームマート<br>
+                    <p>株式会社ホームマート<br>
                     〒635-0821 奈良県北葛城郡広陵町笠287-1</p>
                     <div class="footer-phone">0120-43-8639</div>
                     <p>営業時間：9:00〜22:00 年中無休</p>
