--- a/index.html
+++ b/index.html
@@ -1209,15 +1209,15 @@
                 <div class="hero-text">
                     <div class="hero-badges">
                         <div class="hero-badge">全国964店舗</div>
-                        <div class="hero-badge">年間成約11万件以上</div>
-                        <div class="hero-badge">顧客満足度95.5%</div>
+                        <div class="hero-badge">年間相談600件以上</div>
+                        <div class="hero-badge">顧客満足度100%</div>
                     </div>
-                    <h1>奈良県の不動産を<br><span class="hero-highlight">平均2.7ヶ月で売却</span></h1>
+                    <h1>奈良県の不動産を<br><span class="hero-highlight">平均３ヶ月で売却</span></h1>
                     
                     <div class="hero-stats">
                         <div class="stat-item">
-                            <div class="stat-number">79.2%</div>
-                            <div class="stat-label">3ヶ月以内売却率※1</div>
+                            <div class="stat-number">社長自ら対応</div>
+                            <div class="stat-label">高額売却実現</div>
                         </div>
                         <div class="stat-item">
                             <div class="stat-number">複数社</div>
@@ -1339,7 +1339,7 @@
             
             <div class="kpi-cards">
                 <div class="kpi-card">
-                    <div class="kpi-main">最短３日振込%</div>
+                    <div class="kpi-main">最短３日振込</div>
                     <div class="kpi-description">即金でお支払い</div>
                     <div class="kpi-comparison">スピード対応</div>
                 </div>
@@ -1490,7 +1490,7 @@
                     <div class="case-content">
                         <div class="case-location">📍 大和郡山市</div>
                         <div class="case-details">
-                            <div class="case-type">3LDKマンション</div>
+                            <div class="case-type">マンション</div>
                             <div class="case-period">32日で成約</div>
                         </div>
                         <div class="case-prices">
@@ -1511,7 +1511,7 @@
                     <div class="case-content">
                         <div class="case-location">📍 奈良市</div>
                         <div class="case-details">
-                            <div class="case-type">３LDKマンション（残置物あり）</div>
+                            <div class="case-type">マンション（残置物あり）</div>
                             <div class="case-period">３日で買取</div>
                         </div>
                         <div class="case-prices">
