--- a/index.html
+++ b/index.html
@@ -2016,8 +2016,8 @@
                         </video>
                     </div>
                     <div class="video-info">
-                        <div class="video-title">社長からのメッセージ①</div>
-                        <div class="video-description">なぜ社長が直接対応するのか、その理由をお話しします。</div>
+                        <div class="video-title">社長の雰囲気①</div>
+                        <div class="video-description">社長の話し方や雰囲気がこれでわかります！</div>
                     </div>
                 </div>
 
@@ -2031,8 +2031,8 @@
                         </video>
                     </div>
                     <div class="video-info">
-                        <div class="video-title">売却成功の秘訣</div>
-                        <div class="video-description">12年間の経験から学んだ高値売却のポイントを解説。</div>
+                        <div class="video-title">社長の雰囲気②</div>
+                        <div class="video-description">社員の雰囲気がこれでわかります！</div>
                     </div>
                 </div>
 
@@ -2046,8 +2046,8 @@
                         </video>
                     </div>
                     <div class="video-info">
-                        <div class="video-title">お客様への約束</div>
-                        <div class="video-description">売主様の利益を最優先に考える理由と覚悟。</div>
+                        <div class="video-title">社長の雰囲気③</div>
+                        <div class="video-description">僕たちは正直な会社です。</div>
                     </div>
                 </div>
             </div>
@@ -2514,8 +2514,8 @@
                     </div>
                     <div class="line-feature-item">
                         <div class="line-feature-icon">📷</div>
-                        <strong>写真で即査定</strong>
-                        <p style="font-size: 14px; color: #666; margin-top: 5px;">物件写真を送るだけ</p>
+                        <strong>写真で即相談</strong>
+                        <p style="font-size: 14px; color: #666; margin-top: 5px;">物件写真が送れる</p>
                     </div>
                     <div class="line-feature-item">
                         <div class="line-feature-icon">🔒</div>
@@ -2569,11 +2569,11 @@
                 </div>
                 <div class="flow-item">
                     <div class="flow-number">3</div>
-                    <div class="flow-title">社長が査定</div>
+                    <div class="flow-title">社長が対応</div>
                     <div class="flow-time">最短5分</div>
                     <div class="flow-description">
                         社長が直接<br>
-                        査定額を返信
+                        メッセージを返信
                     </div>
                 </div>
                 <div class="flow-item">
